# launchapp-studio

./: .gitignore  CLAUDE.md  CLAUDE_UI_PLAN.md  FRONTEND_REORGANIZATION_PLAN.md  PACKAGE_ARCHITECTURE.md  PACKAGE_CLEANUP_PLAN.md  README.md  REBUILD_PLAN.md  START_PROJECT_PLAN.md  TERMINAL_GIT_INTEGRATION_PLAN.md  TURBOREPO_SETUP_GUIDE.md  TYPES_MIGRATION_PLAN.md  UI_REORGANIZATION_PLAN.md  VSCODE_EXTENSION_HOST_PLAN.md  WINDOW_MANAGEMENT_DETAILED_SPEC.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  turbo.json  turbo.json.backup  turbo.json.new
apps/desktop/src-tauri/binaries/mcp-server/: Cargo.toml  README.md
plugins/tauri-plugin-claude/: Cargo.toml  README.md  build.rs  package-lock.json  package.json  vite.config.js
plugins/tauri-plugin-claude/dist-js/: index.js  index.mjs  index.mjs.map
plugins/tauri-plugin-claude/guest-js/src/: index.ts
plugins/tauri-plugin-claude/permissions/: default.toml
plugins/tauri-plugin-claude/permissions/autogenerated/: reference.md
plugins/tauri-plugin-claude/permissions/autogenerated/commands/: get_mcp_tools.toml  recover_sessions.toml  send_input.toml
plugins/tauri-plugin-claude/permissions/schemas/: schema.json
plugins/tauri-plugin-claude/src/: commands.rs  error.rs  file_watcher.rs  lib.rs  models.rs  process_manager.rs  service.rs  session_manager.rs
plugins/tauri-plugin-git/: Cargo.toml  README.md  build.rs  package.json  tsconfig.json  vite.config.js
plugins/tauri-plugin-git/dist-js/: index.js  index.mjs  index.mjs.map
plugins/tauri-plugin-git/guest-js/src/: index.ts
plugins/tauri-plugin-git/permissions/: default.toml
plugins/tauri-plugin-git/permissions/autogenerated/: reference.md
plugins/tauri-plugin-git/permissions/autogenerated/commands/: git_add_remote.toml  git_blame.toml  git_branches.toml  git_checkout.toml  git_cherry_pick.toml  (+32 more)
plugins/tauri-plugin-git/permissions/schemas/: schema.json
plugins/tauri-plugin-git/src/: commands.rs  error.rs  lib.rs  models.rs  repository.rs  utils.rs
plugins/tauri-plugin-git/src-js/: index.ts
plugins/tauri-plugin-mcp-webserver/: Cargo.toml  README.md  USAGE_EXAMPLE.md  build.rs  package.json  tsconfig.json  vite.config.js
plugins/tauri-plugin-mcp-webserver/examples/vanilla/: package.json
plugins/tauri-plugin-mcp-webserver/permissions/: default.toml
plugins/tauri-plugin-mcp-webserver/permissions/autogenerated/: reference.md
plugins/tauri-plugin-mcp-webserver/permissions/schemas/: schema.json
plugins/tauri-plugin-mcp-webserver/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs  process_manager.rs
plugins/tauri-plugin-mcp-webserver/src-js/: index.ts
plugins/tauri-plugin-project-management/: Cargo.toml  build.rs  package.json  tsconfig.json  vite.config.js
plugins/tauri-plugin-project-management/permissions/: default.toml
plugins/tauri-plugin-project-management/permissions/autogenerated/: reference.md
plugins/tauri-plugin-project-management/permissions/schemas/: schema.json
plugins/tauri-plugin-project-management/src/: commands.rs  document_service.rs  error.rs  lib.rs  models.rs  project_service.rs  storage_manager.rs  task_service.rs  utils.rs
plugins/tauri-plugin-storage/: Cargo.toml  README.md  api-iife.js  build.rs  package.json  vite.config.js
plugins/tauri-plugin-storage/dist-js/: index.js  index.mjs  index.mjs.map
plugins/tauri-plugin-storage/examples/: basic-usage.ts
plugins/tauri-plugin-storage/guest-js/: package.json  tsconfig.json
plugins/tauri-plugin-storage/guest-js/src/: index.ts
plugins/tauri-plugin-storage/permissions/: default.toml
plugins/tauri-plugin-storage/permissions/autogenerated/: reference.md
plugins/tauri-plugin-storage/permissions/schemas/: schema.json
plugins/tauri-plugin-storage/src/: commands.rs  crypto.rs  error.rs  lib.rs  models.rs  storage.rs
plugins/tauri-plugin-terminal/: Cargo.toml  README.md  build.rs  package.json  vite.config.js
plugins/tauri-plugin-terminal/dist-js/: index.js  index.mjs  index.mjs.map
plugins/tauri-plugin-terminal/guest-js/src/: index.ts
plugins/tauri-plugin-terminal/permissions/: default.toml
plugins/tauri-plugin-terminal/permissions/autogenerated/: reference.md
plugins/tauri-plugin-terminal/permissions/schemas/: schema.json
plugins/tauri-plugin-terminal/src/: commands.rs  error.rs  lib.rs  manager.rs  models.rs  pty_wrapper.rs  session.rs  utils.rs
plugins/tauri-plugin-vscode-host/: Cargo.toml  PLUGIN_PLAN.md  README.md  build.rs  package.json  vite.config.js
plugins/tauri-plugin-vscode-host/extension-host-runtime/: package.json
plugins/tauri-plugin-vscode-host/extension-host-runtime/src/: api-provider.ts  extension-host.ts  extension-loader.ts  index.ts  ipc-handler.ts  utils.ts
plugins/tauri-plugin-vscode-host/permissions/autogenerated/: reference.md
plugins/tauri-plugin-vscode-host/permissions/schemas/: schema.json
plugins/tauri-plugin-vscode-host/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
plugins/tauri-plugin-vscode-host/src-js/: index.ts
plugins/tauri-plugin-vscode-host/src/extension_host/: api_bridge.rs  manager.rs  mod.rs  process.rs  protocol.rs
plugins/tauri-plugin-vscode-host/src/extension_marketplace/: installer.rs  mod.rs  registry.rs  updater.rs
plugins/tauri-plugin-vscode-host/src/language_server/: client.rs  mod.rs  protocol.rs  server_manager.rs
plugins/tauri-plugin-window-manager/: Cargo.toml  README.md  build.rs  package.json  vite.config.js
plugins/tauri-plugin-window-manager/examples/vanilla/: package.json
plugins/tauri-plugin-window-manager/guest-js/: package.json
plugins/tauri-plugin-window-manager/permissions/: default.toml  window-lifecycle.toml  window-manipulation.toml  window-messaging.toml
plugins/tauri-plugin-window-manager/permissions/autogenerated/: reference.md
plugins/tauri-plugin-window-manager/permissions/schemas/: schema.json
plugins/tauri-plugin-window-manager/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs  window_service.rs
plugins/tauri-plugin-window-manager/src-js/: index.ts
(+165 files in other folders)
