[package]
name = "tauri-plugin-git"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Code Pilot Studio"]
description = "Git integration plugin for Tauri"
license = "MIT OR Apache-2.0"
repository = "https://github.com/code-pilot-studio/launchapp-studio-ide"
links = "tauri-plugin-git"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = { version = "0.19", features = ["vendored-openssl"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
schemars = "0.8"
walkdir = "2"
ignore = "0.4"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
schemars = "0.8"