[package]
name = "tauri-plugin-mcp-webserver"
version = "0.1.0"
authors = [ "Code Pilot Studio Team" ]
description = "MCP (Model Context Protocol) webserver plugin for Tauri"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-mcp-webserver"

[dependencies]
tauri = { version = "2.5.0" }
tauri-plugin-shell = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
futures = "0.3"
portpicker = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.0"
reqwest = { version = "0.12", features = ["json"] }

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }
