[package]
name = "tauri-plugin-terminal"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Code Pilot Studio"]
description = "Terminal emulator plugin for Tauri"
license = "MIT OR Apache-2.0"
repository = "https://github.com/code-pilot-studio/launchapp-studio-ide"
links = "tauri-plugin-terminal"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
crossbeam-channel = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
schemars = "0.8"
thiserror = "1"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
schemars = "0.8"