[package]
name = "tauri-plugin-vscode-host"
version = "0.1.0"
authors = ["Code Pilot Studio Team"]
description = "VSCode extension host plugin for running VSCode extensions in Code Pilot Studio"
edition = "2021"
rust-version = "1.71"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-vscode-host"

[lib]
name = "tauri_plugin_vscode_host"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2" }
tauri-plugin = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
crossbeam-channel = "0.5"
parking_lot = "0.12"
bytes = "1"
async-trait = "0.1"
directories = "5"
which = "6"
once_cell = "1"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tar = "0.4"
flate2 = "1"
zip = "2"
tempfile = "3"
glob = "0.3"
jsonrpc-core = "18"
lsp-types = "0.97"
lsp-server = "0.7"
dashmap = "6"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Console", "Win32_Foundation"] }
