[package]
name = "tauri-plugin-window-manager"
version = "0.1.0"
authors = ["Code Pilot Studio"]
description = "Advanced window management plugin for Tauri applications"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/launchapp-studio/tauri-plugin-window-manager"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-window-manager"

[dependencies]
tauri = { version = "2.5.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
uuid = { version = "1.11", features = ["v4", "serde"] }
log = "0.4"

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }
