[package]
name = "launchapp-mcp-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
futures = "0.3"
axum-extra = { version = "0.9", features = ["typed-header"] }

# For finding available port
portpicker = "0.1"

# For SSE support
tokio-stream = "0.1"

# For timestamps
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller panic handler
