[package]
name = "launchapp-mcp-sidecar"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "launchapp-mcp-sidecar"
path = "src/main.rs"

[dependencies]
# Official MCP Rust SDK
rmcp = { version = "0.1", features = ["server", "transport-io", "macros"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# File system operations
tokio-fs = "0.1"

# HTTP client for potential future use
reqwest = { version = "0.11", features = ["json"], optional = true }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller panic handler